--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- Phát nhạc nền tự động -->
 <audio autoplay loop>
-    <source src="https://f2-voice-aac-dl.zdn.vn/1112821160035009111/57957b656875872bde64.aac" type="audio/mp3">
+    <source src="https://drive.google.com/file/d/1OWnyc4-nEWAI_vzyJdGoOyyApfgzU-w0/view?usp=drivesdk" type="audio/mp3">
     Trình duyệt của bạn không hỗ trợ phát nhạc.
 </audio>
 
@@ -15,7 +15,7 @@
   /* Đặt nền bằng ảnh và hiệu ứng gradient động */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: url('https://f56-zpg-r.zdn.vn/jpg/3803005964193623815/010a15212ba895f6ccb9.jpg') no-repeat center center fixed;
+    background: url('https://i.imgur.com/D6aHWND.jpeg') no-repeat center center fixed;
     background-size: cover;
     animation: gradientBG 10s ease infinite;
     display: flex;
